orderSystem/k8s/ordersystem_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ordersystem-ingress
  namespace: natural
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - "server.jungha.store"
    secretName: junghahwang-com-tls
  rules:
  - host: server.jungha.store
    http:
      paths:
      - path: /(.*) 
        pathType: Prefix
        backend:
          service:
            name: ordersystem-service
            port:
              number: 80
